--- a/docs/posts/02wk-1.out.ipynb
+++ b/docs/posts/02wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 02wk-1: 회귀모형 (2) – Step1 ~ 4 / 벡터미분\n",
+        "# 02wk-1: 회귀분석 (2) – Step1~4 / 벡터미분\n",
         "\n",
         "최규빈  \n",
         "2024-03-11\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "d28e2f6b-405e-4e07-8897-b13cdd126be6"
+      "id": "ff6ae46a-d576-4d24-b1f3-afe837f7ad31"
     },
     {
       "cell_type": "code",
@@ -55,7 +55,7 @@
         "\n",
         "라는 생각을 하게 되었고 이를 위하여 아래와 같이 100개의 데이터를 모았다."
       ],
-      "id": "1f00fdb3-3040-4415-98e5-b02110a7a80c"
+      "id": "6d0c8edc-ed8c-4598-b5a9-e03e1c300ec7"
     },
     {
       "cell_type": "code",
@@ -114,7 +114,7 @@
         "\n",
         "[1] 판매량이 소수점이고 심지어 음수인것은 그냥 그려러니 하자.."
       ],
-      "id": "a5fde13a-c1d0-49a3-85ed-cc490d0b2201"
+      "id": "e956e75e-72fb-4c26-94b8-3c7a0cb239aa"
     },
     {
       "cell_type": "code",
@@ -178,7 +178,7 @@
         "\n",
         "`-` 현재까지의 상황을 파이토치로 코딩하면 아래와 같다."
       ],
-      "id": "7ae792f9-dc67-4aed-88b1-3343b0e23cb8"
+      "id": "e54af08e-2d0b-4b07-ae8a-318710b2809c"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
         "이라고 표현할 수 있다. 이 의미는 아래의 그림에서 주황색 점선으로\n",
         "커피판매량을 예측한다는 의미이다."
       ],
-      "id": "9b27bba0-40e5-43ba-a61e-e6ea0e258990"
+      "id": "ca0b7b56-6582-49c4-9464-4154c7634432"
     },
     {
       "cell_type": "code",
@@ -271,7 +271,7 @@
         "\n",
         "`-` 방법1: 이론적으로 추론 \\<- 회귀분석시간에 배운것"
       ],
-      "id": "b930e0d5-40b4-4145-9e96-bbc0ea2ad115"
+      "id": "860b9652-f230-429c-8a3d-cf9a30047bb3"
     },
     {
       "cell_type": "code",
@@ -321,7 +321,7 @@
         "\n",
         "## A. 문제셋팅 다시 복습"
       ],
-      "id": "64bec628-ab15-43b4-a73b-95311eb38f78"
+      "id": "5053eaca-0296-4e42-8f96-e4c924bb2385"
     },
     {
       "cell_type": "code",
@@ -344,7 +344,7 @@
       "source": [
         "## B. 1단계 – 최초의 점선"
       ],
-      "id": "7475aa24-2136-4117-8c81-9a6361a2507e"
+      "id": "6d753a83-5ba1-481c-8e93-ca5d8cb8d7e3"
     },
     {
       "cell_type": "code",
@@ -409,7 +409,7 @@
         "    찍으면 loss값이 작다.\n",
         "-   (중요) 주황색 점선이 ‘적당할 수록’ loss값이 작다."
       ],
-      "id": "d2ea016b-afa5-445a-8a30-a691e322f248"
+      "id": "a38109a5-afab-478e-866c-4acd8357a457"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
         "\n",
         "[2] $\\left|\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})\\right|$"
       ],
-      "id": "20513df8-55cc-425b-a816-50a27200a7a2"
+      "id": "276b5966-e026-490f-8d3e-725ab9f329f1"
     },
     {
       "cell_type": "code",
@@ -499,7 +499,7 @@
       "source": [
         "(실행후)"
       ],
-      "id": "d0b93064-0abe-48bb-9d96-7105772201be"
+      "id": "0002c8a7-21db-4401-9d16-094d29d06058"
     },
     {
       "cell_type": "code",
@@ -544,7 +544,7 @@
         "\n",
         "-   $\\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})=-2{\\bf X}^\\top {\\bf y}+2{\\bf X}^\\top {\\bf X W}$"
       ],
-      "id": "99d39ffa-b962-469a-8fad-e0dbee1f0672"
+      "id": "79eeab55-7819-484b-9914-90aa68f582d2"
     },
     {
       "cell_type": "code",
@@ -575,7 +575,7 @@
         "\n",
         "라고 볼 수 있다. 이를 이용하여 근사계산하면"
       ],
-      "id": "482d9448-1c9b-404a-8060-29ae6afb1844"
+      "id": "738372a3-e9c7-40af-8c07-5e85c2ffadab"
     },
     {
       "cell_type": "code",
@@ -634,7 +634,7 @@
       "source": [
         "이 값은 `What.grad`에 저장된 값과 거의 비슷하다."
       ],
-      "id": "109ed45c-c4b4-4420-9e2f-8c57c3deb280"
+      "id": "bd60fac4-21ca-466f-9f1f-274fe7a432cb"
     },
     {
       "cell_type": "code",
@@ -656,7 +656,7 @@
         "\n",
         "$$\\hat{\\bf W} \\leftarrow \\hat{\\bf W} - \\alpha \\times \\frac{\\partial}{\\partial {\\bf W}}loss({\\bf W})$$"
       ],
-      "id": "ee32247f-6884-45bf-8dce-336b525d6985"
+      "id": "738dc9c3-ae23-4c5c-8d29-460c9a8d001d"
     },
     {
       "cell_type": "code",
@@ -700,7 +700,7 @@
         "\n",
         "`-` 1회 수정결과를 시각화"
       ],
-      "id": "388952b0-e2db-43ef-af0c-a2e993b9b846"
+      "id": "d16d6df6-512a-4644-a8c8-ede7a45dfd9f"
     },
     {
       "cell_type": "code",
@@ -745,7 +745,7 @@
       "source": [
         "## D. 3단계 – iteration (=learn = estimate $\\bf{\\hat W}$)"
       ],
-      "id": "79009f89-7b8a-4ddc-9446-b4ccf00b8bbc"
+      "id": "39d1a261-0a46-4be9-840b-f62cf403941d"
     },
     {
       "cell_type": "code",
@@ -822,7 +822,7 @@
         "\n",
         "## A. 단순무식한 print"
       ],
-      "id": "89f87e21-77d5-477e-bc98-170b9b7d5fa1"
+      "id": "84475064-4319-4239-b87c-c5a984749c16"
     },
     {
       "cell_type": "code",
@@ -889,7 +889,7 @@
       "source": [
         "## B. 반복시각화 – yhat의 관점에서!"
       ],
-      "id": "1719d184-4e78-4ad6-90dc-abc4bc4ad3fb"
+      "id": "42715625-1e25-4009-91d2-7326607b0000"
     },
     {
       "cell_type": "code",
@@ -927,7 +927,7 @@
       "source": [
         "## C. 반복시각화 – loss의 관점에서!!"
       ],
-      "id": "215b8ed5-d30b-4025-83ab-03ae6aec09e1"
+      "id": "6d6f2439-859b-4cde-8245-394f862eeb9b"
     },
     {
       "cell_type": "code",
@@ -1098,7 +1098,7 @@
       "source": [
         "## D. 애니메이션"
       ],
-      "id": "5695d2a0-541f-415c-8137-51ef7407b4eb"
+      "id": "025b6a57-ba71-44da-b00b-06ea8bf5f4cf"
     },
     {
       "cell_type": "code",
@@ -1196,7 +1196,7 @@
         "> epoch = 0 부터 시작하여 시작점에서 출발하도록 애니메이션을\n",
         "> 수정했습니당."
       ],
-      "id": "6c3caabc-e2cf-404c-b10e-7b79530aff85"
+      "id": "f2f8ffa4-17f8-4795-bc8d-cd24f3ee75f9"
     },
     {
       "cell_type": "code",
@@ -1219,7 +1219,7 @@
         "\n",
         "`-` $\\alpha$가 너무 작다면 비효율적임"
       ],
-      "id": "1f0f8013-6eb2-43f4-a1a9-c8888c131fb6"
+      "id": "e196e67d-f634-4678-b690-327a70a23776"
     },
     {
       "cell_type": "code",
@@ -1239,7 +1239,7 @@
       "source": [
         "`-` $\\alpha$가 크다고 무조건 좋은건 또 아님"
       ],
-      "id": "c9c4b78d-6465-4f68-b7b2-0786726d89e6"
+      "id": "a67e7058-26b9-451b-9000-181aef1dddc3"
     },
     {
       "cell_type": "code",
@@ -1259,7 +1259,7 @@
       "source": [
         "`-` 수틀리면 수렴안할수도??"
       ],
-      "id": "a966c907-5ba4-4f4b-bb0a-d5d46173d4c8"
+      "id": "18ab70fa-7234-4d93-bfd2-b2f558c704f7"
     },
     {
       "cell_type": "code",
@@ -1279,7 +1279,7 @@
       "source": [
         "`-` 그냥 망할수도??"
       ],
-      "id": "69bd4c23-9dab-443a-ad24-48d54b43b198"
+      "id": "6a1bae01-3145-4ff5-927c-e35f47e90cbd"
     },
     {
       "cell_type": "code",
@@ -1315,7 +1315,7 @@
         "\n",
         "이때 손실함수의 미분값을 아래와 같이 주어지고,\n",
         "\n",
-        "$$\\frac{\\partial}{\\partial {\\boldsymbol \\beta}}loss({\\boldsymbol \\beta}) = -2{\\bf X}^\\top{\\bf y}+{\\bf X}^\\top{\\bf X}{\\boldsymbol \\beta}$$\n",
+        "$$\\frac{\\partial}{\\partial {\\boldsymbol \\beta}}loss({\\boldsymbol \\beta}) = -2{\\bf X}^\\top{\\bf y}+2{\\bf X}^\\top{\\bf X}{\\boldsymbol \\beta}$$\n",
         "\n",
         "따라서 손실함수를 최소화하는 추정량이 아래와 같이 주어짐을 보여라.\n",
         "\n",
@@ -1325,9 +1325,9 @@
         "\n",
         "<https://youtu.be/playlist?list=PLQqh36zP38-zPLHXfSQ1xtloXmczqwzod&si=zZ7bvAQEPVRGthhk>\n",
         "\n",
-        "<https://github.com/guebin/DL2024/blob/main/posts/02wk-벡터미분.pdf>"
+        "<https://github.com/guebin/DL2024/blob/main/posts/02wksupp.pdf>"
       ],
-      "id": "b0085fa6-d920-49c3-a9a4-4dcd31f4f731"
+      "id": "c7761cbd-d0d9-4463-9289-df6ab7e76a1b"
     }
   ],
   "nbformat": 4,
