--- a/docs/posts/02wk-2.out.ipynb
+++ b/docs/posts/02wk-2.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 02wk-2: 회귀모형 (3) – Step1,2,4 의 변형\n",
+        "# 02wk-2: 회귀분석 (3) – Step1,2,4 의 변형\n",
         "\n",
         "최규빈  \n",
         "2024-03-13\n",
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "422817ff-db63-412e-a12e-be728d512e00"
+      "id": "44486c57-e915-4cb3-bd05-ac5e06ee616f"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "## A. Data"
       ],
-      "id": "86a54720-4fb8-400d-8e40-6f6cf8c2857b"
+      "id": "358876c6-6efb-49b6-a628-bbc7245b17a9"
     },
     {
       "cell_type": "code",
@@ -92,7 +92,7 @@
         "\n",
         "`-` 외우세여"
       ],
-      "id": "1b18a906-f9f0-42dd-a577-828404c3c6e2"
+      "id": "803c7da3-994e-46de-ae75-ae6bf68ab947"
     },
     {
       "cell_type": "code",
@@ -122,7 +122,7 @@
       "source": [
         "`-` 결과 시각화"
       ],
-      "id": "eaadcf7b-ffa8-405f-b51c-10d4387cce20"
+      "id": "918f6a9c-c7a0-4c12-8603-f72fff402842"
     },
     {
       "cell_type": "code",
@@ -154,7 +154,7 @@
         "\n",
         "`-` 수정된 코드"
       ],
-      "id": "2edaf270-5e7e-4ee2-b611-2edd368b8238"
+      "id": "1d1b255e-a94d-48dd-a247-778e6fb85666"
     },
     {
       "cell_type": "code",
@@ -187,7 +187,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "01d00b1c-9ebd-4a64-9cfa-ff9aa7db4b1a"
+      "id": "3aa1be16-20c8-4118-b797-0dda8f4f42e0"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "\n",
         "원래 yhat을 이런식으로 구했는데 ~"
       ],
-      "id": "dab3861a-9513-4cec-93d7-3428e91a0281"
+      "id": "d60e2fea-7b6c-4319-96f6-b2e1bfbec41d"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
       "source": [
         "이런식으로도 구할수 있음!"
       ],
-      "id": "121ba52e-17cd-47b0-9f82-dc44786430ed"
+      "id": "0288ed35-b1ce-4678-8d52-7a564c23432a"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "2f61d601-99f9-4536-a93a-2f13aadc62d5"
+      "id": "876d90df-de5c-4fb2-9607-7ab82f82346c"
     },
     {
       "cell_type": "code",
@@ -329,7 +329,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "541171bf-15bb-4879-8a1b-c7da9f42a451"
+      "id": "40fe225e-fae4-482e-86fa-53788ba7b85a"
     },
     {
       "cell_type": "code",
@@ -363,7 +363,7 @@
         "\n",
         "`-` 준비과정"
       ],
-      "id": "fc93020e-d9ac-4bcc-92dd-18a45d5bf5b4"
+      "id": "2f67c28f-c2dd-4cfe-8d02-926cc1ccc198"
     },
     {
       "cell_type": "code",
@@ -393,7 +393,7 @@
         "\n",
         "(미분전) – step1~2 완료"
       ],
-      "id": "6886076a-c94e-46b7-a852-7d78d59fa4d4"
+      "id": "067ea575-f378-4864-b423-daa171093f78"
     },
     {
       "cell_type": "code",
@@ -436,7 +436,7 @@
       "source": [
         "(미분후, 업데이트 진행전) – step3 완료"
       ],
-      "id": "4412d9c8-cef2-4fef-9a38-5f3ab42e5244"
+      "id": "fbf99c3b-5c06-440f-bc6e-8627871b25d6"
     },
     {
       "cell_type": "code",
@@ -478,7 +478,7 @@
       "source": [
         "(업데이트 진행후) – step4 의 첫째줄 완료"
       ],
-      "id": "12f5c901-7a85-48a9-988e-8549984db8a9"
+      "id": "3c492979-742d-4a51-8e02-654c54a274e3"
     },
     {
       "cell_type": "code",
@@ -520,7 +520,7 @@
       "source": [
         "(업데이트 완료 후 초기화까지 끝냄) – step4 의 두번째줄 완료"
       ],
-      "id": "1f0ed5a4-02f9-4936-a2c9-f2494ec2292a"
+      "id": "6f9ccff0-265f-4f3c-a6c6-cf9432170648"
     },
     {
       "cell_type": "code",
@@ -564,7 +564,7 @@
         "\n",
         "`-` 준비과정 – 옵티마이저라는 오브젝트를 셋팅한다!"
       ],
-      "id": "bfcfc808-ffe0-43fd-aae2-3c1fda6d4405"
+      "id": "1200e223-f2d4-4348-b218-294bcd63ba30"
     },
     {
       "cell_type": "code",
@@ -596,7 +596,7 @@
         "\n",
         "(미분전) – step1~2 완료"
       ],
-      "id": "730cd74c-9bd2-48d3-ae8f-4790dff35d9d"
+      "id": "1c979944-45d5-4d37-a9ac-bbb0d16df7b4"
     },
     {
       "cell_type": "code",
@@ -639,7 +639,7 @@
       "source": [
         "(미분후, 업데이트 진행전) – step3 완료"
       ],
-      "id": "f247ed9b-57c8-461e-9706-faf60686007d"
+      "id": "ca508c34-ecd8-4015-9a37-3742f4af900b"
     },
     {
       "cell_type": "code",
@@ -681,7 +681,7 @@
       "source": [
         "(업데이트 진행후) – step4 의 첫째줄 완료"
       ],
-      "id": "ec710f75-6614-4915-a882-7962c6fbea3c"
+      "id": "c3988428-1ab7-4277-b730-6683751a9a8b"
     },
     {
       "cell_type": "code",
@@ -724,7 +724,7 @@
       "source": [
         "(업데이트 완료 후 초기화까지 끝냄) – step4 의 두번째줄 완료"
       ],
-      "id": "94bf46be-90ab-403a-ac60-6d028d88c595"
+      "id": "0586fd8e-c06d-4f72-a5e9-5415d4bd21a5"
     },
     {
       "cell_type": "code",
@@ -769,7 +769,7 @@
         "\n",
         "`-` 학습"
       ],
-      "id": "d283dd40-8064-4ea5-9691-764d003b214f"
+      "id": "834c4a81-5940-45da-93f3-290481e5b916"
     },
     {
       "cell_type": "code",
@@ -809,7 +809,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "1fab5ab7-f387-40b6-bcb7-29fb58d26cd5"
+      "id": "bce25cf9-bcdc-44fa-85e7-8ecdcdf2fccc"
     },
     {
       "cell_type": "code",
@@ -852,7 +852,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.8"
     }
   }
 }
