--- a/docs/posts/03wk-1.out.ipynb
+++ b/docs/posts/03wk-1.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "797bd062-014c-4dd1-bf10-98f14a237220"
+      "id": "a218e821-0977-45b0-bd51-42424f2ca2bb"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "7765f4d1-324d-42fc-b07e-9bccbbba65b3"
+      "id": "56122b46-020b-4109-ad63-c58a619bc23f"
     },
     {
       "cell_type": "code",
@@ -175,9 +175,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 3. ToyData (1)"
+        "# 3. ToyData1"
       ],
-      "id": "61679359-4239-4f13-9d61-11accb1a0c22"
+      "id": "cbc5e07d-cc2f-4c2e-af17-120e82a2a140"
     },
     {
       "cell_type": "code",
@@ -226,9 +226,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 4. ToyData (2)"
+        "# 4. ToyData2"
       ],
-      "id": "de37a4e6-80fe-4605-b8ea-347f83e88baa"
+      "id": "2ccc2367-b0da-464a-8035-56c43e2f6205"
     },
     {
       "cell_type": "code",
@@ -282,7 +282,7 @@
         "`-` 최초의 곡선을 그려보자. ($net: x \\to yhat$ 을 수행하는 네트워크를\n",
         "설계해보자는 의미)"
       ],
-      "id": "f4cf9803-9f1e-4293-8e79-2411b4f5ace9"
+      "id": "21e466f2-101a-40dd-9f09-43fba89d0171"
     },
     {
       "cell_type": "code",
@@ -340,7 +340,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = False)`로 구현"
       ],
-      "id": "946f0b27-f428-4659-8d4e-278a30c96a85"
+      "id": "9a2dd29e-9685-4cbb-9158-1bf51a32ba51"
     },
     {
       "cell_type": "code",
@@ -386,7 +386,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = True)`로 구현"
       ],
-      "id": "4a2f456b-c437-4672-a5c2-be5c6fecb8fe"
+      "id": "9e0ccd36-94d2-431a-88d7-c9c83fff8fca"
     },
     {
       "cell_type": "code",
@@ -433,7 +433,7 @@
       "source": [
         "`-` 내가만든 sigmoid 대신에 토치에서 제공하는 sigmoid 사용"
       ],
-      "id": "dd3a103f-c21d-4902-8c79-66fd757665b8"
+      "id": "f6ae9e55-66bb-4ed4-a5ca-6d32b6d0319d"
     },
     {
       "cell_type": "code",
@@ -465,7 +465,7 @@
       "source": [
         "`-` 지금까지의 구현 확인"
       ],
-      "id": "996d2fee-64e4-4bd8-bc90-879b66a423f0"
+      "id": "531f02c4-5f4c-4b21-9c0e-fc36f608c144"
     },
     {
       "cell_type": "code",
@@ -506,7 +506,7 @@
         "\n",
         "이러한 기능을 하는 하나의 함수 $net$을 만들 수 없을까?"
       ],
-      "id": "2038f0da-6007-4fd2-907f-58028bff066c"
+      "id": "1abeee3d-2e4e-47a9-a2a4-2d962928259d"
     },
     {
       "cell_type": "code",
@@ -539,7 +539,7 @@
         "`-` net 살펴보기: 초보버전 – “파이토치 30일만에 완성하기” 이런책에 보면\n",
         "내용이 나올지도?"
       ],
-      "id": "34a1c7c7-c9a4-4f3b-9d5d-73809a0308b9"
+      "id": "b1b9eb1f-3059-4794-a6b1-6ddc70b3d13c"
     },
     {
       "cell_type": "code",
@@ -561,7 +561,7 @@
         "\n",
         "`-` net 살펴보기: 고수버전 – 책 안보고 코딩배우기"
       ],
-      "id": "ea655fa9-a310-46fd-a739-9450c767b34b"
+      "id": "8416adfe-1ba5-428d-a174-55b924b21f58"
     },
     {
       "cell_type": "code",
@@ -582,7 +582,7 @@
         "-   좋은거 가지고 있네 ㅎㅎ\n",
         "-   callable 이면서 subscriptable 오브젝트.."
       ],
-      "id": "0537b934-70a8-45d5-ae3d-75d6ee5b1648"
+      "id": "1b3fbebb-639b-475d-be32-8d0ac41a27d3"
     },
     {
       "cell_type": "code",
@@ -687,7 +687,7 @@
       "source": [
         "## Step 1~4"
       ],
-      "id": "773d9fb5-033d-4ee8-9ea4-af733aff2bf0"
+      "id": "f2e0e9b1-0c68-4478-b820-190fee88dc37"
     },
     {
       "cell_type": "code",
@@ -797,7 +797,7 @@
         "\n",
         "## A. 좋은 초기값"
       ],
-      "id": "184e9c5f-d4eb-4ab9-94bb-1dd477f5371e"
+      "id": "e94101ee-cea9-4f39-a5fb-e8867133f505"
     },
     {
       "cell_type": "code",
@@ -826,7 +826,7 @@
       "source": [
         "## B. 가능성 있는 초기값"
       ],
-      "id": "015b13bc-d65f-479e-8af8-c54fc881ec34"
+      "id": "6cbeeb04-df88-4372-b99a-3790c9fe5950"
     },
     {
       "cell_type": "code",
@@ -855,7 +855,7 @@
       "source": [
         "## C. 최악의 초기값"
       ],
-      "id": "bde15b53-3b74-43ce-b745-86f79e841a59"
+      "id": "5fbf4f84-4de8-4913-87ff-da8986164e12"
     },
     {
       "cell_type": "code",
@@ -896,7 +896,7 @@
         "\n",
         "-   <https://en.wikipedia.org/wiki/Cross-entropy>"
       ],
-      "id": "0693d1bc-e859-4306-95ab-df84d570b198"
+      "id": "b1830476-a077-4a3d-a648-57a5cd522558"
     },
     {
       "cell_type": "code",
@@ -960,7 +960,7 @@
         "\n",
         "`-` loss수식을 못외우겠다면?"
       ],
-      "id": "82e50157-4ca9-45f6-9407-374542a8b47c"
+      "id": "9799879d-54a3-4732-8676-90a55559bff7"
     },
     {
       "cell_type": "code",
@@ -1022,7 +1022,7 @@
       "source": [
         "## B. Loss Function 시각화"
       ],
-      "id": "7238188d-841c-429d-a4c9-3323f8eb0542"
+      "id": "7a587805-2186-4ded-8d6d-6ac8d07acf24"
     },
     {
       "cell_type": "code",
@@ -1070,7 +1070,7 @@
       "source": [
         "`-` 비교해보자."
       ],
-      "id": "fd7576a1-8714-459b-93e1-15e014908573"
+      "id": "19be7dde-40e0-4b4f-ba1b-2b7dac0ab33f"
     },
     {
       "cell_type": "code",
@@ -1104,7 +1104,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "5bd83bd6-4f56-42c7-a653-4d8cab8a209b"
+      "id": "69727383-f4d9-41b9-bb62-43b51b637728"
     },
     {
       "cell_type": "code",
@@ -1131,7 +1131,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "08b565b4-87c7-4bd6-a06a-ab11e2c28d58"
+      "id": "5825def3-8a22-4cbd-8cb5-ba4a0bd705f5"
     },
     {
       "cell_type": "code",
@@ -1160,7 +1160,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "b570215d-ae8e-4cdc-809d-3a362c0e7a27"
+      "id": "238e1da2-af86-4064-922a-c1dfd706ebab"
     },
     {
       "cell_type": "code",
@@ -1187,7 +1187,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "3d50a459-e8a7-408b-8e08-c38ead04df62"
+      "id": "2bd7d67d-d8da-4376-bd65-4f9d84cf87b6"
     },
     {
       "cell_type": "code",
@@ -1216,7 +1216,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "a488860b-c5c6-494f-b368-73143febb063"
+      "id": "c24f22b7-e09e-47f2-8442-fbdb44817fd4"
     },
     {
       "cell_type": "code",
@@ -1243,7 +1243,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "30bfba0b-c150-4e5d-97ed-30c810489197"
+      "id": "cea36835-9d05-48f7-a1ce-37e9792fb53f"
     },
     {
       "cell_type": "code",
@@ -1274,7 +1274,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "bb1d2f7c-cde8-4a71-8882-a4ac007d8db4"
+      "id": "e070dc74-d36e-4be4-9762-a1df645c39a7"
     },
     {
       "cell_type": "code",
@@ -1301,7 +1301,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "2e028218-b8f4-4466-9029-f728b3ba6ed0"
+      "id": "7332880a-7840-4145-b15c-3cadc15a5da1"
     },
     {
       "cell_type": "code",
@@ -1330,7 +1330,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "ccca0817-f801-44d8-89de-089fcc5592bc"
+      "id": "db91e8a5-f352-4d3d-a9ed-88bef747a27a"
     },
     {
       "cell_type": "code",
@@ -1357,7 +1357,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "e1e60c12-9783-49a4-a70e-1bf81e85864b"
+      "id": "629c68cd-2596-4662-a75f-51417b2c2861"
     },
     {
       "cell_type": "code",
@@ -1386,7 +1386,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "878691e3-2a39-42fc-956d-3b41962afd1e"
+      "id": "46893460-db5b-4d08-a6df-1ebe1f6ca630"
     },
     {
       "cell_type": "code",
@@ -1413,7 +1413,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "2e488578-6d1b-43e2-a41b-2a1dbed647a0"
+      "id": "829b53a9-629e-4427-bf84-b253c9c6edaa"
     },
     {
       "cell_type": "code",
@@ -1459,7 +1459,7 @@
         "\n",
         "## B. 가짜데이터"
       ],
-      "id": "64f6d99f-2802-4c4b-95e9-ee1990d10bda"
+      "id": "65bd50ad-48ff-4524-9c51-992ad11c24f3"
     },
     {
       "cell_type": "code",
@@ -1517,7 +1517,7 @@
       "source": [
         "## C. 로지스틱으로 적합"
       ],
-      "id": "527e86da-15f0-409e-bc52-1583203a0811"
+      "id": "97f2d2b1-e51e-4e50-9515-b671967f71f1"
     },
     {
       "cell_type": "code",
@@ -1585,7 +1585,7 @@
         "\n",
         "`-` sigmoid를 넣기 전의 상태가 직선이 아니라 꺽이는 직선이야 한다."
       ],
-      "id": "fd053354-94f5-416f-9d1d-d1381ae8fd2c"
+      "id": "b2d2d389-72a3-49c7-99e5-747eaf1d5b38"
     },
     {
       "cell_type": "code",
@@ -1638,6 +1638,17 @@
         "ax[3,1].legend()"
       ],
       "id": "7781e8ad-028e-42da-8287-9bee666f3f9d"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 9. HW\n",
+        "\n",
+        "강의노트의 로직스틱 예제 `ToyData2` 에서 다양한 초기값에서 BCE loss 와\n",
+        "Adma을 이용하여 학습해보고 시각화해보라."
+      ],
+      "id": "8e4ef76a-9e7d-4d69-ac97-fa3e95aa4243"
     }
   ],
   "nbformat": 4,
