--- a/docs/posts/03wk-1.out.ipynb
+++ b/docs/posts/03wk-1.out.ipynb
@@ -7,13 +7,13 @@
         "# 03wk-1: 로지스틱 – 로지스틱, BCELoss, Adam, 로지스틱의 한계\n",
         "\n",
         "최규빈  \n",
-        "2024-03-13\n",
+        "2024-03-18\n",
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/02wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "52ef5b06-4a9d-4dd9-8e3d-824aba45ccf9"
+      "id": "244c3083-02ec-4397-868d-ee8446140473"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "31b2aa2d-350e-4993-b5cb-fd1bb7f0ce2a"
+      "id": "2704754e-ac66-4f73-8847-5ed9d3eb237c"
     },
     {
       "cell_type": "code",
@@ -181,7 +181,7 @@
         "\n",
         "`-` $X$를 가지고 $y$를 맞추는 아래와 같은 문제"
       ],
-      "id": "9ce6c7dd-e53a-4751-853c-bce9d05ddf72"
+      "id": "594f72de-ad2d-40cf-b0ed-1b4d6eaf9045"
     },
     {
       "cell_type": "code",
@@ -215,7 +215,7 @@
         "\n",
         "`-` 아래와 같이 모형화 하면?"
       ],
-      "id": "b5eb64d9-7a96-4db7-b2e8-0a1078f86c2f"
+      "id": "fcf14b76-70bb-441b-b98d-1dfa477677a9"
     },
     {
       "cell_type": "code",
@@ -265,14 +265,14 @@
         "\n",
         "-   회귀모형: $y_i \\sim {\\cal N}(w_0+w_1x_i, \\sigma^2)$[1]\n",
         "-   로지스틱:\n",
-        "    $y_i \\sim {\\cal B}(\\frac{exp(w_0+w_1x_i}{1+exp(w_0+w_1x_i})$\n",
+        "    $y_i \\sim {\\cal B}\\big(\\frac{\\exp(w_0+w_1x_i)}{1+\\exp(w_0+w_1x_i)}\\big)$\n",
         "\n",
         "## B. 데이터\n",
         "\n",
         "[1] 원래는 이렇게 썼었지..\n",
         "$y_i = w_0 + w_1x_i + \\epsilon_i \\quad \\epsilon_i \\sim N(0,\\sigma^2)$"
       ],
-      "id": "93336630-9431-47c7-af00-7b6bdc30dc8d"
+      "id": "49c1a203-08a5-4c5f-9a26-3cca0c0384ac"
     },
     {
       "cell_type": "code",
@@ -326,7 +326,7 @@
         "`-` 최초의 곡선을 그려보자. ($net: x \\to yhat$ 을 수행하는 네트워크를\n",
         "설계해보자는 의미)"
       ],
-      "id": "29c64c5c-dabc-40d1-85d7-f666d94c058b"
+      "id": "857f7992-20b7-4739-9d73-f816cab7e5eb"
     },
     {
       "cell_type": "code",
@@ -384,7 +384,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = False)`로 구현"
       ],
-      "id": "75164f38-baac-42dd-983a-e9822951e141"
+      "id": "83997f52-59b0-487c-acdf-c8cfdd274fdf"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = True)`로 구현"
       ],
-      "id": "0c55556f-0886-41c0-95e9-6486cc5dbdb9"
+      "id": "d92e7472-416d-43c3-a53b-032617a9eef6"
     },
     {
       "cell_type": "code",
@@ -477,7 +477,7 @@
       "source": [
         "`-` 내가만든 sigmoid 대신에 토치에서 제공하는 sigmoid 사용"
       ],
-      "id": "fc24dc82-bfff-4087-aa26-131c32ecbdb5"
+      "id": "46292c36-89e1-455c-88e6-2a802fff4c21"
     },
     {
       "cell_type": "code",
@@ -509,7 +509,7 @@
       "source": [
         "`-` 지금까지의 구현 확인"
       ],
-      "id": "db0015d2-4b3e-4582-bc99-43d03d92a492"
+      "id": "1ea8d115-0379-4972-9156-ab69cf6ba70c"
     },
     {
       "cell_type": "code",
@@ -550,7 +550,7 @@
         "\n",
         "이러한 기능을 하는 하나의 함수 $net$을 만들 수 없을까?"
       ],
-      "id": "2eb052cc-a52f-4d7c-b3e1-5750c3eeb11b"
+      "id": "0d753e73-05ca-447f-a48b-4846df70f4a1"
     },
     {
       "cell_type": "code",
@@ -583,7 +583,7 @@
         "`-` net 살펴보기: 초보버전 – “파이토치 30일만에 완성하기” 이런책에 보면\n",
         "내용이 나올지도?"
       ],
-      "id": "6426cf4c-5f5c-4cf7-a622-4cc62f205007"
+      "id": "5372edd6-6dd0-47b5-a1b6-df4874a3de45"
     },
     {
       "cell_type": "code",
@@ -605,7 +605,7 @@
         "\n",
         "`-` net 살펴보기: 고수버전 – 책 안보고 코딩배우기"
       ],
-      "id": "ba9e8df7-24e6-4463-84cc-54a943ad990b"
+      "id": "e26860da-ac38-4e99-9689-0e5d9d5b2679"
     },
     {
       "cell_type": "code",
@@ -626,7 +626,7 @@
         "-   좋은거 가지고 있네 ㅎㅎ\n",
         "-   callable 이면서 subscriptable 오브젝트.."
       ],
-      "id": "ce66892f-3d4a-4aec-983f-71fc5317e68c"
+      "id": "d3bc4521-7497-4931-8fb6-b452a71fcf0b"
     },
     {
       "cell_type": "code",
@@ -731,7 +731,7 @@
       "source": [
         "## D. Step 1~4"
       ],
-      "id": "06a66969-4808-4f54-8fc4-16c41a9484dd"
+      "id": "d30a8fe9-899c-49d4-bc8d-a070a8ff6f7d"
     },
     {
       "cell_type": "code",
@@ -841,7 +841,7 @@
         "\n",
         "## A. 좋은 초기값"
       ],
-      "id": "9f2f5608-6ebd-435c-a055-230910a36e3a"
+      "id": "c045713f-f70e-47ae-9b49-ce92218245c3"
     },
     {
       "cell_type": "code",
@@ -870,7 +870,7 @@
       "source": [
         "## B. 가능성 있는 초기값"
       ],
-      "id": "cf38e7a9-8376-4a82-9f56-fefa862383c8"
+      "id": "3ebeacc6-80e6-4ab1-974e-e42230535d0c"
     },
     {
       "cell_type": "code",
@@ -899,7 +899,7 @@
       "source": [
         "## C. 최악의 초기값"
       ],
-      "id": "8c0b3a62-1323-42e0-85ed-da02f46daf86"
+      "id": "2cf43c48-7177-4d04-bde0-e2c327b34968"
     },
     {
       "cell_type": "code",
@@ -940,7 +940,7 @@
         "\n",
         "-   <https://en.wikipedia.org/wiki/Cross-entropy>"
       ],
-      "id": "4c859eee-9859-49f5-91f2-814216904cd1"
+      "id": "aee489d1-85b8-4d4a-9445-70c13f9dc786"
     },
     {
       "cell_type": "code",
@@ -1004,7 +1004,7 @@
         "\n",
         "`-` loss수식을 못외우겠다면?"
       ],
-      "id": "31d66d7b-3b01-45ed-a07d-9066d55741e8"
+      "id": "b2e823fc-a331-4f7e-bb00-8053aaa21860"
     },
     {
       "cell_type": "code",
@@ -1066,7 +1066,7 @@
       "source": [
         "## B. Loss Function 시각화"
       ],
-      "id": "58abe221-fd47-4bf0-a736-4860d86a0dfe"
+      "id": "694eecfb-2025-4e41-8d96-67fa579f3aa2"
     },
     {
       "cell_type": "code",
@@ -1114,7 +1114,7 @@
       "source": [
         "`-` 비교해보자."
       ],
-      "id": "4f519f40-e14f-41bf-ac8f-1138d54dc317"
+      "id": "39fac607-d291-4ec4-b482-8108ec0ce289"
     },
     {
       "cell_type": "code",
@@ -1148,7 +1148,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "ac149897-4979-4c91-a112-4f8b4744c334"
+      "id": "276ff6a3-e620-454d-84f6-b7efe0c98d39"
     },
     {
       "cell_type": "code",
@@ -1177,7 +1177,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "e8888065-2e6b-401d-a63a-dddbefa7e383"
+      "id": "0f7823fb-6d80-42ec-b68d-0d9f87a2f825"
     },
     {
       "cell_type": "code",
@@ -1208,7 +1208,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "d5298bac-ba5c-4779-98b2-80ed3338454e"
+      "id": "28ada269-7786-41b6-b6ac-3234a7cd9eb2"
     },
     {
       "cell_type": "code",
@@ -1237,7 +1237,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "04f2f6c8-9815-47b3-8051-2cf37ade1622"
+      "id": "de6205d9-a082-4ffb-834f-ca5e48a30c20"
     },
     {
       "cell_type": "code",
@@ -1268,7 +1268,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "f48f1c63-f82b-4eb3-9a5f-b49528bad908"
+      "id": "be569758-8fdc-4027-92db-fbafa477b686"
     },
     {
       "cell_type": "code",
@@ -1297,7 +1297,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "d1351484-9a54-44d2-aee9-ae8b307f280b"
+      "id": "83ad8da7-e9d3-4b73-aaee-045a0496ce96"
     },
     {
       "cell_type": "code",
@@ -1330,7 +1330,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "895641b0-f321-4903-8637-9effc7a419d7"
+      "id": "179f98d8-006a-46e7-af32-ddfe29ed4a5e"
     },
     {
       "cell_type": "code",
@@ -1359,7 +1359,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "a42e43f0-1a64-4657-85c9-5d9e5125ef5a"
+      "id": "32b0a131-9d0b-4a5f-a6ba-0f7facf6f131"
     },
     {
       "cell_type": "code",
@@ -1390,7 +1390,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "59babc0a-5931-4eee-9b5a-f69337fdca6f"
+      "id": "ea0e6bd4-ad8b-48ef-bc7a-44ca5cd5baaa"
     },
     {
       "cell_type": "code",
@@ -1419,7 +1419,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "3e8ef3c2-1e35-42ae-b1ed-a3caabdf0c7c"
+      "id": "55455506-aeb3-4eaa-97f5-5f8f41b2b91a"
     },
     {
       "cell_type": "code",
@@ -1450,7 +1450,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "ae466e62-daf8-4a6c-b57e-f4a0a9c3f748"
+      "id": "1edad0bd-3070-4a4a-9fb6-6fb4d2dc4b90"
     },
     {
       "cell_type": "code",
@@ -1479,7 +1479,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "df2d54ce-51e6-422e-9cbb-21b24598ca00"
+      "id": "fcb53270-c098-4c5d-b8f3-8a8b7050c4b8"
     },
     {
       "cell_type": "code",
@@ -1527,7 +1527,7 @@
         "\n",
         "## B. 가짜데이터"
       ],
-      "id": "67694e8e-5369-4568-acd4-cc9635d489ab"
+      "id": "c338b624-eee0-4e1d-85a2-94a38d97e90b"
     },
     {
       "cell_type": "code",
@@ -1585,7 +1585,7 @@
       "source": [
         "## C. 로지스틱으로 적합"
       ],
-      "id": "53937a0d-a19e-4337-b52b-b81e92eb0723"
+      "id": "ed91acaf-0628-4284-a3b0-55863054c1cd"
     },
     {
       "cell_type": "code",
@@ -1653,7 +1653,7 @@
         "\n",
         "`-` sigmoid를 넣기 전의 상태가 직선이 아니라 꺽이는 직선이야 한다."
       ],
-      "id": "133ab833-f313-4837-8f36-d87aa5a2905d"
+      "id": "3b128ecf-b5cc-4742-b869-2ab2f20f7df9"
     },
     {
       "cell_type": "code",
@@ -1716,7 +1716,7 @@
         "강의노트의 로직스틱 예제 `ToyData2` 에서 다양한 초기값에서 BCE loss 와\n",
         "Adma을 이용하여 학습해보고 시각화해보라."
       ],
-      "id": "621a9fa3-85dd-4478-9a48-d8d4613e9409"
+      "id": "b954adf9-b07b-4c3a-89f6-3668b419020a"
     }
   ],
   "nbformat": 4,
