--- a/docs/posts/03wk-1.out.ipynb
+++ b/docs/posts/03wk-1.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "244c3083-02ec-4397-868d-ee8446140473"
+      "id": "907fd0c2-a028-446e-a22e-54c690274a93"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "2704754e-ac66-4f73-8847-5ed9d3eb237c"
+      "id": "5de9535f-57a7-44d4-9e98-2c10e3a2d18f"
     },
     {
       "cell_type": "code",
@@ -181,7 +181,7 @@
         "\n",
         "`-` $X$를 가지고 $y$를 맞추는 아래와 같은 문제"
       ],
-      "id": "594f72de-ad2d-40cf-b0ed-1b4d6eaf9045"
+      "id": "ad2b2d69-688d-47ee-bc00-2977191007e8"
     },
     {
       "cell_type": "code",
@@ -215,7 +215,7 @@
         "\n",
         "`-` 아래와 같이 모형화 하면?"
       ],
-      "id": "fcf14b76-70bb-441b-b98d-1dfa477677a9"
+      "id": "a8e0bedf-a587-4967-839a-e463d77e5df4"
     },
     {
       "cell_type": "code",
@@ -253,7 +253,7 @@
         "`-` $x$가 커질수록 $y=1$이 잘나오는 모형은 아래와 같이 설계할 수 있음\n",
         "\\<— 외우세요!!!\n",
         "\n",
-        "-   $y_i \\sim Ber(\\pi_i),\\quad$ where\n",
+        "-   $y_i \\sim {\\cal B}(\\pi_i),\\quad$ where\n",
         "    $\\pi_i = \\frac{\\exp(w_0+w_1x_i)}{1+\\exp(w_0+w_1x_i)}$\n",
         "\n",
         "-   $\\hat{y}_i= \\frac{\\exp(\\hat{w}_0+\\hat{w}_1x_i)}{1+\\exp(\\hat{w}_0+\\hat{w}_1x_i)}=\\frac{1}{1+\\exp(-\\hat{w}_0-\\hat{w}_1x_i)}$\n",
@@ -267,12 +267,22 @@
         "-   로지스틱:\n",
         "    $y_i \\sim {\\cal B}\\big(\\frac{\\exp(w_0+w_1x_i)}{1+\\exp(w_0+w_1x_i)}\\big)$\n",
         "\n",
+        "`-` 우리가 예측하고 싶은것\n",
+        "\n",
+        "-   회귀모형: 정규분포의 평균을 예측하고 싶음. 즉 $w_0+w_1x_i$를\n",
+        "    예측하고 싶음. 예측값으로는 $\\hat{w}_0 + \\hat{w}_1x_i$를 사용!\n",
+        "-   로지스틱: 베르누이의 평균을 예측하고 싶음. 즉\n",
+        "    $\\frac{\\exp(w_0+w_1x_i)}{1+\\exp(w_0+w_1x_i)}$를 예측하고 싶음.\n",
+        "    예측값으로는\n",
+        "    $\\frac{\\exp(\\hat{w}_0+\\hat{w}_1x_i)}{1+\\exp(\\hat{w}_0+\\hat{w}_1x_i)}$를\n",
+        "    사용!\n",
+        "\n",
         "## B. 데이터\n",
         "\n",
         "[1] 원래는 이렇게 썼었지..\n",
-        "$y_i = w_0 + w_1x_i + \\epsilon_i \\quad \\epsilon_i \\sim N(0,\\sigma^2)$"
+        "$y_i = w_0 + w_1x_i + \\epsilon_i \\quad \\epsilon_i \\sim {\\cal N}(0,\\sigma^2)$"
       ],
-      "id": "49c1a203-08a5-4c5f-9a26-3cca0c0384ac"
+      "id": "d4ad2df3-1902-4eab-9cb6-4594cd4c614d"
     },
     {
       "cell_type": "code",
@@ -326,7 +336,7 @@
         "`-` 최초의 곡선을 그려보자. ($net: x \\to yhat$ 을 수행하는 네트워크를\n",
         "설계해보자는 의미)"
       ],
-      "id": "857f7992-20b7-4739-9d73-f816cab7e5eb"
+      "id": "9e05a674-469d-4bf8-9163-0dede0614b11"
     },
     {
       "cell_type": "code",
@@ -384,7 +394,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = False)`로 구현"
       ],
-      "id": "83997f52-59b0-487c-acdf-c8cfdd274fdf"
+      "id": "2727391a-dceb-42f1-a12b-9fb390d5af38"
     },
     {
       "cell_type": "code",
@@ -430,7 +440,7 @@
       "source": [
         "`-` `w0hat + w1hat*x` 이 부분을 `torch.nn.Linear(bias = True)`로 구현"
       ],
-      "id": "d92e7472-416d-43c3-a53b-032617a9eef6"
+      "id": "a4638d51-7bfb-4ea7-b981-8f306c62424b"
     },
     {
       "cell_type": "code",
@@ -477,7 +487,7 @@
       "source": [
         "`-` 내가만든 sigmoid 대신에 토치에서 제공하는 sigmoid 사용"
       ],
-      "id": "46292c36-89e1-455c-88e6-2a802fff4c21"
+      "id": "c3328480-c5c9-4a54-984e-bab473086b9b"
     },
     {
       "cell_type": "code",
@@ -509,7 +519,7 @@
       "source": [
         "`-` 지금까지의 구현 확인"
       ],
-      "id": "1ea8d115-0379-4972-9156-ab69cf6ba70c"
+      "id": "a6afff87-9f8a-4cc9-bb03-d11ed940476e"
     },
     {
       "cell_type": "code",
@@ -550,7 +560,7 @@
         "\n",
         "이러한 기능을 하는 하나의 함수 $net$을 만들 수 없을까?"
       ],
-      "id": "0d753e73-05ca-447f-a48b-4846df70f4a1"
+      "id": "b90f981a-9ce1-4439-b197-6e8096ed8284"
     },
     {
       "cell_type": "code",
@@ -583,7 +593,7 @@
         "`-` net 살펴보기: 초보버전 – “파이토치 30일만에 완성하기” 이런책에 보면\n",
         "내용이 나올지도?"
       ],
-      "id": "5372edd6-6dd0-47b5-a1b6-df4874a3de45"
+      "id": "0ad34db9-23d5-41d0-b902-c3019beb8fbd"
     },
     {
       "cell_type": "code",
@@ -605,7 +615,7 @@
         "\n",
         "`-` net 살펴보기: 고수버전 – 책 안보고 코딩배우기"
       ],
-      "id": "e26860da-ac38-4e99-9689-0e5d9d5b2679"
+      "id": "2daed4ef-f7a4-450e-a452-778027a68f3c"
     },
     {
       "cell_type": "code",
@@ -626,7 +636,7 @@
         "-   좋은거 가지고 있네 ㅎㅎ\n",
         "-   callable 이면서 subscriptable 오브젝트.."
       ],
-      "id": "d3bc4521-7497-4931-8fb6-b452a71fcf0b"
+      "id": "c7ab3d02-6cb5-4386-bfe6-3e031320e3ae"
     },
     {
       "cell_type": "code",
@@ -731,7 +741,7 @@
       "source": [
         "## D. Step 1~4"
       ],
-      "id": "d30a8fe9-899c-49d4-bc8d-a070a8ff6f7d"
+      "id": "1995dbbe-6080-4d45-ba0a-a0f249ddb710"
     },
     {
       "cell_type": "code",
@@ -841,7 +851,7 @@
         "\n",
         "## A. 좋은 초기값"
       ],
-      "id": "c045713f-f70e-47ae-9b49-ce92218245c3"
+      "id": "db64f4c1-c375-4fd9-98b8-8611e1849cf4"
     },
     {
       "cell_type": "code",
@@ -870,7 +880,7 @@
       "source": [
         "## B. 가능성 있는 초기값"
       ],
-      "id": "3ebeacc6-80e6-4ab1-974e-e42230535d0c"
+      "id": "77bf5c59-d28b-40a2-97bd-9437f7be680f"
     },
     {
       "cell_type": "code",
@@ -899,7 +909,7 @@
       "source": [
         "## C. 최악의 초기값"
       ],
-      "id": "2cf43c48-7177-4d04-bde0-e2c327b34968"
+      "id": "4da8c51b-a534-47a8-8613-efff798de182"
     },
     {
       "cell_type": "code",
@@ -940,7 +950,7 @@
         "\n",
         "-   <https://en.wikipedia.org/wiki/Cross-entropy>"
       ],
-      "id": "aee489d1-85b8-4d4a-9445-70c13f9dc786"
+      "id": "b0cb2d33-5213-41c1-9936-aeb6104f3be1"
     },
     {
       "cell_type": "code",
@@ -1004,7 +1014,7 @@
         "\n",
         "`-` loss수식을 못외우겠다면?"
       ],
-      "id": "b2e823fc-a331-4f7e-bb00-8053aaa21860"
+      "id": "ad0d94aa-a0b4-47c7-98f9-002fa3e2d3d8"
     },
     {
       "cell_type": "code",
@@ -1066,7 +1076,7 @@
       "source": [
         "## B. Loss Function 시각화"
       ],
-      "id": "694eecfb-2025-4e41-8d96-67fa579f3aa2"
+      "id": "ffbb5c87-21dd-4c70-89ec-d05ebccd20af"
     },
     {
       "cell_type": "code",
@@ -1114,7 +1124,7 @@
       "source": [
         "`-` 비교해보자."
       ],
-      "id": "39fac607-d291-4ec4-b482-8108ec0ce289"
+      "id": "79fb40af-dc2e-44fe-88e5-1b88990d4cdf"
     },
     {
       "cell_type": "code",
@@ -1148,7 +1158,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "276ff6a3-e620-454d-84f6-b7efe0c98d39"
+      "id": "73130936-773c-4a27-a8e6-378113532686"
     },
     {
       "cell_type": "code",
@@ -1177,7 +1187,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "0f7823fb-6d80-42ec-b68d-0d9f87a2f825"
+      "id": "da75babc-2795-4bea-810b-8b5341f52144"
     },
     {
       "cell_type": "code",
@@ -1208,7 +1218,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "28ada269-7786-41b6-b6ac-3234a7cd9eb2"
+      "id": "f771b189-f706-4e0e-81e2-4648bcc782a8"
     },
     {
       "cell_type": "code",
@@ -1237,7 +1247,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "de6205d9-a082-4ffb-834f-ca5e48a30c20"
+      "id": "9f0273e5-7dde-4fc7-8b16-ffd182cba6d8"
     },
     {
       "cell_type": "code",
@@ -1268,7 +1278,7 @@
         "\n",
         "`-` MSELoss"
       ],
-      "id": "be569758-8fdc-4027-92db-fbafa477b686"
+      "id": "7485b6c0-4caa-49d9-856f-f1d1574418b8"
     },
     {
       "cell_type": "code",
@@ -1297,7 +1307,7 @@
       "source": [
         "`-` BCELoss"
       ],
-      "id": "83ad8da7-e9d3-4b73-aaee-045a0496ce96"
+      "id": "09a7bbd6-2469-4f06-8467-f5cd1ba164f4"
     },
     {
       "cell_type": "code",
@@ -1330,7 +1340,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "179f98d8-006a-46e7-af32-ddfe29ed4a5e"
+      "id": "cb836629-9adc-416c-9403-ae57784bd535"
     },
     {
       "cell_type": "code",
@@ -1359,7 +1369,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "32b0a131-9d0b-4a5f-a6ba-0f7facf6f131"
+      "id": "436f24aa-6b5e-4194-b74c-91b86c8ca736"
     },
     {
       "cell_type": "code",
@@ -1390,7 +1400,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "ea0e6bd4-ad8b-48ef-bc7a-44ca5cd5baaa"
+      "id": "4f0aff60-57a9-4afa-86d8-6530ccfcc7c8"
     },
     {
       "cell_type": "code",
@@ -1419,7 +1429,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "55455506-aeb3-4eaa-97f5-5f8f41b2b91a"
+      "id": "dc501fa6-6e34-4f2a-b002-ab381f6cf4b8"
     },
     {
       "cell_type": "code",
@@ -1450,7 +1460,7 @@
         "\n",
         "`-` MSELoss + SGD"
       ],
-      "id": "1edad0bd-3070-4a4a-9fb6-6fb4d2dc4b90"
+      "id": "1e984332-a796-4ac2-b6cb-b29513880344"
     },
     {
       "cell_type": "code",
@@ -1479,7 +1489,7 @@
       "source": [
         "`-` MSELoss + Adam"
       ],
-      "id": "fcb53270-c098-4c5d-b8f3-8a8b7050c4b8"
+      "id": "d96ce535-083f-489f-a95f-c5b011dbe506"
     },
     {
       "cell_type": "code",
@@ -1527,7 +1537,7 @@
         "\n",
         "## B. 가짜데이터"
       ],
-      "id": "c338b624-eee0-4e1d-85a2-94a38d97e90b"
+      "id": "918bfd72-3436-40ac-a6e8-e4d661c63ee0"
     },
     {
       "cell_type": "code",
@@ -1585,7 +1595,7 @@
       "source": [
         "## C. 로지스틱으로 적합"
       ],
-      "id": "ed91acaf-0628-4284-a3b0-55863054c1cd"
+      "id": "5298e55e-276d-4172-aac0-37fa10d8e970"
     },
     {
       "cell_type": "code",
@@ -1653,7 +1663,7 @@
         "\n",
         "`-` sigmoid를 넣기 전의 상태가 직선이 아니라 꺽이는 직선이야 한다."
       ],
-      "id": "3b128ecf-b5cc-4742-b869-2ab2f20f7df9"
+      "id": "e67778ce-f24c-4c7d-9e4f-1363dc606b39"
     },
     {
       "cell_type": "code",
@@ -1716,7 +1726,7 @@
         "강의노트의 로직스틱 예제 `ToyData2` 에서 다양한 초기값에서 BCE loss 와\n",
         "Adma을 이용하여 학습해보고 시각화해보라."
       ],
-      "id": "b954adf9-b07b-4c3a-89f6-3668b419020a"
+      "id": "f3f65207-e608-4f62-a710-c98432a66756"
     }
   ],
   "nbformat": 4,
